Fix check style