@@ -1,5 +1,28 @@
 package com.michelin.kafkactl.services;
 
+import static com.michelin.kafkactl.services.FormatService.TABLE;
+import static com.michelin.kafkactl.utils.constants.ConstantKind.CHANGE_CONNECTOR_STATE;
+import static com.michelin.kafkactl.utils.constants.ConstantKind.CONNECTOR;
+import static com.michelin.kafkactl.utils.constants.ConstantKind.CONNECT_CLUSTER;
+import static com.michelin.kafkactl.utils.constants.ConstantKind.CONSUMER_GROUP_RESET_OFFSET_RESPONSE;
+import static com.michelin.kafkactl.utils.constants.ConstantKind.DELETE_RECORDS_RESPONSE;
+import static com.michelin.kafkactl.utils.constants.ConstantKind.KAFKA_USER_RESET_PASSWORD;
+import static com.michelin.kafkactl.utils.constants.ConstantKind.SCHEMA_COMPATIBILITY_STATE;
+import static com.michelin.kafkactl.utils.constants.ConstantKind.SUBJECT;
+import static com.michelin.kafkactl.utils.constants.ConstantKind.VAULT_RESPONSE;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyBoolean;
+import static org.mockito.Mockito.argThat;
+import static org.mockito.Mockito.doCallRealMethod;
+import static org.mockito.Mockito.eq;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
 import com.michelin.kafkactl.KafkactlCommand;
 import com.michelin.kafkactl.client.ClusterResourceClient;
 import com.michelin.kafkactl.client.NamespacedResourceClient;
@@ -10,25 +33,21 @@ import com.michelin.kafkactl.models.SchemaCompatibility;
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.HttpStatus;
 import io.micronaut.http.client.exceptions.HttpClientResponseException;
+import java.io.File;
+import java.io.PrintWriter;
+import java.io.StringWriter;
+import java.time.Instant;
+import java.util.Collections;
+import java.util.Date;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import picocli.CommandLine;
-
-import java.io.File;
-import java.io.PrintWriter;
-import java.io.StringWriter;
-import java.time.Instant;
-import java.util.*;
-
-import static com.michelin.kafkactl.services.FormatService.TABLE;
-import static com.michelin.kafkactl.utils.constants.ConstantKind.*;
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyBoolean;
-import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class ResourceServiceTest {
@@ -53,27 +72,27 @@ class ResourceServiceTest {
     @Test
     void shouldListAllWhenOneNamespacedApiResource() {
         ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
 
         Resource resource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         when(namespacedClient.list(any(), any(), any()))
-                .thenReturn(Collections.singletonList(resource));
+            .thenReturn(Collections.singletonList(resource));
 
         int actual = resourceService.listAll(Collections.singletonList(apiResource), "namespace", cmd.getCommandSpec());
 
@@ -84,27 +103,27 @@ class ResourceServiceTest {
     @Test
     void shouldListAllWhenOneNonNamespacedApiResource() {
         ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(false)
-                .synchronizable(true)
-                .build();
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(false)
+            .synchronizable(true)
+            .build();
 
         Resource resource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         when(nonNamespacedClient.list(any(), any()))
-                .thenReturn(Collections.singletonList(resource));
+            .thenReturn(Collections.singletonList(resource));
 
         int actual = resourceService.listAll(Collections.singletonList(apiResource), "namespace", cmd.getCommandSpec());
 
@@ -114,22 +133,22 @@ class ResourceServiceTest {
 
     @Test
     void shouldListAllWhenEmptyResponse() {
-        ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
-
         CommandLine cmd = new CommandLine(new KafkactlCommand());
         StringWriter sw = new StringWriter();
         cmd.setOut(new PrintWriter(sw));
 
         doCallRealMethod()
-                .when(formatService).prettifyKind(any());
+            .when(formatService).prettifyKind(any());
         when(namespacedClient.list(any(), any(), any()))
-                .thenReturn(Collections.emptyList());
+            .thenReturn(Collections.emptyList());
+
+        ApiResource apiResource = ApiResource.builder()
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
 
         int actual = resourceService.listAll(Collections.singletonList(apiResource), "namespace", cmd.getCommandSpec());
 
@@ -140,12 +159,12 @@ class ResourceServiceTest {
     @Test
     void shouldNotListAllWhenHttpClientResponseException() {
         ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
         StringWriter sw = new StringWriter();
@@ -153,7 +172,7 @@ class ResourceServiceTest {
 
         HttpClientResponseException exception = new HttpClientResponseException("error", HttpResponse.serverError());
         when(namespacedClient.list(any(), any(), any()))
-                .thenThrow(exception);
+            .thenThrow(exception);
 
         int actual = resourceService.listAll(Collections.singletonList(apiResource), "namespace", cmd.getCommandSpec());
 
@@ -164,83 +183,86 @@ class ResourceServiceTest {
     @Test
     void shouldListAllWhenMultipleApiResources() {
         ApiResource apiResourceOne = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
 
         ApiResource apiResourceTwo = ApiResource.builder()
-                .kind("Connector")
-                .namespaced(true)
-                .synchronizable(true)
-                .path("connectors")
-                .names(List.of("connects", "connect", "co"))
-                .build();
+            .kind("Connector")
+            .namespaced(true)
+            .synchronizable(true)
+            .path("connectors")
+            .names(List.of("connects", "connect", "co"))
+            .build();
 
         Resource topicResource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         Resource connectorResource = Resource.builder()
-                .kind("Connector")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Connector")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
         StringWriter sw = new StringWriter();
         cmd.setErr(new PrintWriter(sw));
 
         when(namespacedClient.list(any(), any(), any()))
-                .thenReturn(Collections.singletonList(topicResource))
-                .thenReturn(Collections.singletonList(connectorResource));
+            .thenReturn(Collections.singletonList(topicResource))
+            .thenReturn(Collections.singletonList(connectorResource));
 
-        int actual = resourceService.listAll(List.of(apiResourceOne, apiResourceTwo), "namespace", cmd.getCommandSpec());
+        int actual =
+            resourceService.listAll(List.of(apiResourceOne, apiResourceTwo), "namespace", cmd.getCommandSpec());
 
         assertEquals(0, actual);
-        verify(formatService).displayList("Topic", Collections.singletonList(topicResource), TABLE, cmd.getCommandSpec());
-        verify(formatService).displayList("Connector", Collections.singletonList(connectorResource), TABLE, cmd.getCommandSpec());
+        verify(formatService).displayList("Topic", Collections.singletonList(topicResource), TABLE,
+            cmd.getCommandSpec());
+        verify(formatService).displayList("Connector", Collections.singletonList(connectorResource), TABLE,
+            cmd.getCommandSpec());
     }
 
     @Test
     void shouldListAllWhenMultipleApiResourcesAndException() {
         ApiResource apiResourceOne = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
 
         ApiResource apiResourceTwo = ApiResource.builder()
-                .kind("Connector")
-                .namespaced(true)
-                .synchronizable(true)
-                .path("connectors")
-                .names(List.of("connects", "connect", "co"))
-                .build();
+            .kind("Connector")
+            .namespaced(true)
+            .synchronizable(true)
+            .path("connectors")
+            .names(List.of("connects", "connect", "co"))
+            .build();
 
         Resource topicResource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
         StringWriter sw = new StringWriter();
@@ -248,38 +270,40 @@ class ResourceServiceTest {
 
         HttpClientResponseException exception = new HttpClientResponseException("error", HttpResponse.serverError());
         when(namespacedClient.list(any(), any(), any()))
-                .thenReturn(Collections.singletonList(topicResource))
-                .thenThrow(exception);
+            .thenReturn(Collections.singletonList(topicResource))
+            .thenThrow(exception);
 
-        int actual = resourceService.listAll(List.of(apiResourceOne, apiResourceTwo), "namespace", cmd.getCommandSpec());
+        int actual =
+            resourceService.listAll(List.of(apiResourceOne, apiResourceTwo), "namespace", cmd.getCommandSpec());
 
         assertEquals(1, actual);
-        verify(formatService).displayList("Topic", Collections.singletonList(topicResource), TABLE, cmd.getCommandSpec());
+        verify(formatService).displayList("Topic", Collections.singletonList(topicResource), TABLE,
+            cmd.getCommandSpec());
         verify(formatService).displayError(exception, "Connector", cmd.getCommandSpec());
     }
 
     @Test
     void shouldGetSingleNamespacedResourceWithType() {
         ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
 
         Resource topicResource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         when(namespacedClient.get(any(), any(), any(), any()))
-                .thenReturn(HttpResponse.ok(topicResource));
+            .thenReturn(HttpResponse.ok(topicResource));
 
         Resource actual = resourceService.getSingleResourceWithType(apiResource, "namespace", "resourceName", false);
 
@@ -289,25 +313,25 @@ class ResourceServiceTest {
     @Test
     void shouldGetSingleNonNamespacedResourceWithType() {
         ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(false)
-                .synchronizable(true)
-                .build();
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(false)
+            .synchronizable(true)
+            .build();
 
         Resource topicResource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         when(nonNamespacedClient.get(any(), any(), any()))
-                .thenReturn(HttpResponse.ok(topicResource));
+            .thenReturn(HttpResponse.ok(topicResource));
 
         Resource actual = resourceService.getSingleResourceWithType(apiResource, "namespace", "resourceName", false);
 
@@ -317,29 +341,29 @@ class ResourceServiceTest {
     @Test
     void shouldThrowExceptionWhenGetSingleResourceWithTypeNotFound() {
         ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
 
         Resource topicResource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         when(namespacedClient.get(any(), any(), any(), any()))
-                .thenReturn(HttpResponse.notFound(topicResource));
+            .thenReturn(HttpResponse.notFound(topicResource));
 
         HttpClientResponseException actual = assertThrows(HttpClientResponseException.class,
-                () -> resourceService.getSingleResourceWithType(apiResource, "namespace",
-                        "resourceName", true));
+            () -> resourceService.getSingleResourceWithType(apiResource, "namespace",
+                "resourceName", true));
 
         assertEquals("Not Found", actual.getMessage());
         assertEquals(HttpStatus.NOT_FOUND, actual.getStatus());
@@ -348,28 +372,28 @@ class ResourceServiceTest {
     @Test
     void shouldNotThrowExceptionWhenGetSingleResourceWithTypeNotFound() {
         ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
 
         Resource topicResource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         when(namespacedClient.get(any(), any(), any(), any()))
-                .thenReturn(HttpResponse.notFound(topicResource));
+            .thenReturn(HttpResponse.notFound(topicResource));
 
         Resource actual = resourceService.getSingleResourceWithType(apiResource, "namespace",
-                "resourceName", false);
+            "resourceName", false);
 
         assertEquals(topicResource, actual);
     }
@@ -377,28 +401,28 @@ class ResourceServiceTest {
     @Test
     void shouldThrowServerExceptionWhenGetSingleResourceWithType() {
         ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
 
         Resource topicResource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         when(namespacedClient.get(any(), any(), any(), any()))
-                .thenReturn(HttpResponse.serverError(topicResource));
+            .thenReturn(HttpResponse.serverError(topicResource));
 
         Resource actual = resourceService.getSingleResourceWithType(apiResource, "namespace",
-                "resourceName", false);
+            "resourceName", false);
 
         assertEquals(topicResource, actual);
     }
@@ -406,31 +430,32 @@ class ResourceServiceTest {
     @Test
     void shouldApplyNamespacedResourceAndHandleHttpResponseException() {
         ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
 
         Resource topicResource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         HttpClientResponseException exception = new HttpClientResponseException("error", HttpResponse.notFound());
 
         when(namespacedClient.apply(any(), any(), any(), any(), anyBoolean()))
-                .thenThrow(exception);
+            .thenThrow(exception);
 
-        HttpResponse<Resource> actual = resourceService.apply(apiResource, "namespace", topicResource, false, cmd.getCommandSpec());
+        HttpResponse<Resource> actual =
+            resourceService.apply(apiResource, "namespace", topicResource, false, cmd.getCommandSpec());
 
         assertNull(actual);
         verify(formatService).displayError(exception, "Topic", "prefix.topic", cmd.getCommandSpec());
@@ -438,23 +463,15 @@ class ResourceServiceTest {
 
     @Test
     void shouldApplyNamespacedResource() {
-        ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
-
         Resource topicResource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
         StringWriter sw = new StringWriter();
@@ -462,11 +479,20 @@ class ResourceServiceTest {
 
         doCallRealMethod().when(formatService).prettifyKind(any());
         when(namespacedClient.apply(any(), any(), any(), any(), anyBoolean()))
-                .thenReturn(HttpResponse
-                        .ok(topicResource)
-                        .header("X-Ns4kafka-Result", "created"));
+            .thenReturn(HttpResponse
+                .ok(topicResource)
+                .header("X-Ns4kafka-Result", "created"));
 
-        HttpResponse<Resource> actual = resourceService.apply(apiResource, "namespace", topicResource, false, cmd.getCommandSpec());
+        ApiResource apiResource = ApiResource.builder()
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
+
+        HttpResponse<Resource> actual =
+            resourceService.apply(apiResource, "namespace", topicResource, false, cmd.getCommandSpec());
 
         assertEquals(HttpStatus.OK, actual.getStatus());
         assertEquals(topicResource, actual.body());
@@ -475,23 +501,15 @@ class ResourceServiceTest {
 
     @Test
     void shouldApplyNamespacedResourceNullHeaderInResponse() {
-        ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
-
         Resource topicResource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
         StringWriter sw = new StringWriter();
@@ -499,10 +517,19 @@ class ResourceServiceTest {
 
         doCallRealMethod().when(formatService).prettifyKind(any());
         when(namespacedClient.apply(any(), any(), any(), any(), anyBoolean()))
-                .thenReturn(HttpResponse
-                        .ok(topicResource));
+            .thenReturn(HttpResponse
+                .ok(topicResource));
 
-        HttpResponse<Resource> actual = resourceService.apply(apiResource, "namespace", topicResource, false, cmd.getCommandSpec());
+        ApiResource apiResource = ApiResource.builder()
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
+
+        HttpResponse<Resource> actual =
+            resourceService.apply(apiResource, "namespace", topicResource, false, cmd.getCommandSpec());
 
         assertEquals(HttpStatus.OK, actual.getStatus());
         assertEquals(topicResource, actual.body());
@@ -511,23 +538,15 @@ class ResourceServiceTest {
 
     @Test
     void shouldApplyNonNamespacedResource() {
-        ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(false)
-                .synchronizable(true)
-                .build();
-
         Resource topicResource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
         StringWriter sw = new StringWriter();
@@ -535,11 +554,20 @@ class ResourceServiceTest {
 
         doCallRealMethod().when(formatService).prettifyKind(any());
         when(nonNamespacedClient.apply(any(), any(), any(), anyBoolean()))
-                .thenReturn(HttpResponse
-                        .ok(topicResource)
-                        .header("X-Ns4kafka-Result", "created"));
+            .thenReturn(HttpResponse
+                .ok(topicResource)
+                .header("X-Ns4kafka-Result", "created"));
 
-        HttpResponse<Resource> actual = resourceService.apply(apiResource, "namespace", topicResource, false, cmd.getCommandSpec());
+        ApiResource apiResource = ApiResource.builder()
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(false)
+            .synchronizable(true)
+            .build();
+
+        HttpResponse<Resource> actual =
+            resourceService.apply(apiResource, "namespace", topicResource, false, cmd.getCommandSpec());
 
         assertEquals(HttpStatus.OK, actual.getStatus());
         assertEquals(topicResource, actual.body());
@@ -548,23 +576,23 @@ class ResourceServiceTest {
 
     @Test
     void shouldDeleteNamespacedResource() {
-        ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
-
         CommandLine cmd = new CommandLine(new KafkactlCommand());
         StringWriter sw = new StringWriter();
         cmd.setOut(new PrintWriter(sw));
 
         doCallRealMethod().when(formatService).prettifyKind(any());
         when(namespacedClient.delete(any(), any(), any(), any(), anyBoolean()))
-                .thenReturn(HttpResponse
-                        .<Void>ok()
-                        .header("X-Ns4kafka-Result", "created"));
+            .thenReturn(HttpResponse
+                .<Void>ok()
+                .header("X-Ns4kafka-Result", "created"));
+
+        ApiResource apiResource = ApiResource.builder()
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
 
         boolean actual = resourceService.delete(apiResource, "namespace", "name", false, cmd.getCommandSpec());
 
@@ -574,23 +602,23 @@ class ResourceServiceTest {
 
     @Test
     void shouldDeleteNonNamespacedResource() {
-        ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(false)
-                .synchronizable(true)
-                .build();
-
         CommandLine cmd = new CommandLine(new KafkactlCommand());
         StringWriter sw = new StringWriter();
         cmd.setOut(new PrintWriter(sw));
 
         doCallRealMethod().when(formatService).prettifyKind(any());
         when(nonNamespacedClient.delete(any(), any(), any(), anyBoolean()))
-                .thenReturn(HttpResponse
-                        .<Void>ok()
-                        .header("X-Ns4kafka-Result", "created"));
+            .thenReturn(HttpResponse
+                .<Void>ok()
+                .header("X-Ns4kafka-Result", "created"));
+
+        ApiResource apiResource = ApiResource.builder()
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(false)
+            .synchronizable(true)
+            .build();
 
         boolean actual = resourceService.delete(apiResource, "namespace", "name", false, cmd.getCommandSpec());
 
@@ -601,18 +629,18 @@ class ResourceServiceTest {
     @Test
     void shouldDeleteNamespacedResourceAndHandleHttpResponseException() {
         ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         HttpClientResponseException exception = new HttpClientResponseException("error", HttpResponse.serverError());
         when(namespacedClient.delete(any(), any(), any(), any(), anyBoolean()))
-                .thenThrow(exception);
+            .thenThrow(exception);
 
         boolean actual = resourceService.delete(apiResource, "namespace", "prefix.topic", false, cmd.getCommandSpec());
 
@@ -623,77 +651,78 @@ class ResourceServiceTest {
     @Test
     void shouldThrowExceptionWhenDeleteNotFoundResource() {
         ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         when(namespacedClient.delete(any(), any(), any(), any(), anyBoolean()))
-                .thenReturn(HttpResponse.notFound());
+            .thenReturn(HttpResponse.notFound());
 
         boolean actual = resourceService.delete(apiResource, "namespace", "prefix.topic", false, cmd.getCommandSpec());
 
         assertFalse(actual);
         verify(formatService).displayError(argThat(exception -> exception.getStatus().equals(HttpStatus.NOT_FOUND)
                 && exception.getMessage().equals("Not Found")), eq("Topic"), eq("prefix.topic"),
-                eq(cmd.getCommandSpec()));
+            eq(cmd.getCommandSpec()));
     }
 
     @Test
     void shouldImportAllSuccess() {
         ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
 
         Resource topicResource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         when(namespacedClient.importResources(any(), any(), any(), anyBoolean()))
-                .thenReturn(Collections.singletonList(topicResource));
+            .thenReturn(Collections.singletonList(topicResource));
 
         int actual = resourceService.importAll(Collections.singletonList(apiResource), "namespace", false,
-                cmd.getCommandSpec());
+            cmd.getCommandSpec());
 
         assertEquals(0, actual);
-        verify(formatService).displayList("Topic", Collections.singletonList(topicResource), TABLE, cmd.getCommandSpec());
+        verify(formatService).displayList("Topic", Collections.singletonList(topicResource), TABLE,
+            cmd.getCommandSpec());
     }
 
     @Test
     void shouldImportAllEmpty() {
         ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
         StringWriter sw = new StringWriter();
         cmd.setOut(new PrintWriter(sw));
 
         when(namespacedClient.importResources(any(), any(), any(), anyBoolean()))
-                .thenReturn(Collections.emptyList());
+            .thenReturn(Collections.emptyList());
 
         int actual = resourceService.importAll(Collections.singletonList(apiResource), "namespace", false,
-                cmd.getCommandSpec());
+            cmd.getCommandSpec());
 
         assertEquals(0, actual);
         assertTrue(sw.toString().contains("No topic to import."));
@@ -702,21 +731,21 @@ class ResourceServiceTest {
     @Test
     void shouldImportAllFail() {
         ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
+            .kind("Topic")
+            .path("topics")
+            .names(List.of("topics", "topic", "to"))
+            .namespaced(true)
+            .synchronizable(true)
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         HttpClientResponseException exception = new HttpClientResponseException("error", HttpResponse.serverError());
         when(namespacedClient.importResources(any(), any(), any(), anyBoolean()))
-                .thenThrow(exception);
+            .thenThrow(exception);
 
         int actual = resourceService.importAll(Collections.singletonList(apiResource), "namespace", false,
-                cmd.getCommandSpec());
+            cmd.getCommandSpec());
 
         assertEquals(1, actual);
         verify(formatService).displayError(exception, cmd.getCommandSpec());
@@ -725,24 +754,25 @@ class ResourceServiceTest {
     @Test
     void shouldDeleteRecordsSuccess() {
         Resource topicResource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         when(namespacedClient.deleteRecords(any(), any(), any(), anyBoolean()))
-                .thenReturn(Collections.singletonList(topicResource));
+            .thenReturn(Collections.singletonList(topicResource));
 
         int actual = resourceService.deleteRecords("namespace", "topic", false, cmd.getCommandSpec());
 
         assertEquals(0, actual);
-        verify(formatService).displayList(DELETE_RECORDS_RESPONSE, Collections.singletonList(topicResource), TABLE, cmd.getCommandSpec());
+        verify(formatService).displayList(DELETE_RECORDS_RESPONSE, Collections.singletonList(topicResource), TABLE,
+            cmd.getCommandSpec());
     }
 
     @Test
@@ -752,7 +782,7 @@ class ResourceServiceTest {
         cmd.setOut(new PrintWriter(sw));
 
         when(namespacedClient.deleteRecords(any(), any(), any(), anyBoolean()))
-                .thenReturn(Collections.emptyList());
+            .thenReturn(Collections.emptyList());
 
         int actual = resourceService.deleteRecords("namespace", "topic", false, cmd.getCommandSpec());
 
@@ -768,7 +798,7 @@ class ResourceServiceTest {
 
         HttpClientResponseException exception = new HttpClientResponseException("error", HttpResponse.serverError());
         when(namespacedClient.deleteRecords(any(), any(), any(), anyBoolean()))
-                .thenThrow(exception);
+            .thenThrow(exception);
 
         int actual = resourceService.deleteRecords("namespace", "topic", false, cmd.getCommandSpec());
 
@@ -779,44 +809,45 @@ class ResourceServiceTest {
     @Test
     void shouldResetOffsetsSuccess() {
         Resource topicResource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         when(namespacedClient.resetOffsets(any(), any(), any(), any(), anyBoolean()))
-                .thenReturn(Collections.singletonList(topicResource));
+            .thenReturn(Collections.singletonList(topicResource));
 
         int actual = resourceService.resetOffsets("namespace", "topic", topicResource, false, cmd.getCommandSpec());
 
         assertEquals(0, actual);
-        verify(formatService).displayList(CONSUMER_GROUP_RESET_OFFSET_RESPONSE, Collections.singletonList(topicResource), TABLE, cmd.getCommandSpec());
+        verify(formatService).displayList(CONSUMER_GROUP_RESET_OFFSET_RESPONSE,
+            Collections.singletonList(topicResource), TABLE, cmd.getCommandSpec());
     }
 
     @Test
     void shouldResetOffsetsEmpty() {
         Resource topicResource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
         StringWriter sw = new StringWriter();
         cmd.setOut(new PrintWriter(sw));
 
         when(namespacedClient.resetOffsets(any(), any(), any(), any(), anyBoolean()))
-                .thenReturn(Collections.emptyList());
+            .thenReturn(Collections.emptyList());
 
         int actual = resourceService.resetOffsets("namespace", "topic", topicResource, false, cmd.getCommandSpec());
 
@@ -827,14 +858,14 @@ class ResourceServiceTest {
     @Test
     void shouldResetOffsetsFail() {
         Resource topicResource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind("Topic")
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .creationTimestamp(Date.from(Instant.parse("2000-01-01T01:00:00.00Z")))
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
         StringWriter sw = new StringWriter();
@@ -842,7 +873,7 @@ class ResourceServiceTest {
 
         HttpClientResponseException exception = new HttpClientResponseException("error", HttpResponse.serverError());
         when(namespacedClient.resetOffsets(any(), any(), any(), any(), anyBoolean()))
-                .thenThrow(exception);
+            .thenThrow(exception);
 
         int actual = resourceService.resetOffsets("namespace", "topic", topicResource, false, cmd.getCommandSpec());
 
@@ -853,20 +884,22 @@ class ResourceServiceTest {
     @Test
     void shouldChangeConnectorState() {
         Resource changeConnectorStateResource = Resource.builder()
-                .kind(CHANGE_CONNECTOR_STATE)
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("connector")
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind(CHANGE_CONNECTOR_STATE)
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("connector")
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         when(namespacedClient.changeConnectorState(any(), any(), any(), any()))
-                .thenReturn(HttpResponse.ok(changeConnectorStateResource));
+            .thenReturn(HttpResponse.ok(changeConnectorStateResource));
 
-        Optional<Resource> actual = resourceService.changeConnectorState("namespace", "connector", changeConnectorStateResource, cmd.getCommandSpec());
+        Optional<Resource> actual =
+            resourceService.changeConnectorState("namespace", "connector", changeConnectorStateResource,
+                cmd.getCommandSpec());
 
         assertTrue(actual.isPresent());
         assertEquals(changeConnectorStateResource, actual.get());
@@ -875,46 +908,48 @@ class ResourceServiceTest {
     @Test
     void shouldChangeConnectorStateNotFound() {
         Resource changeConnectorStateResource = Resource.builder()
-                .kind(CHANGE_CONNECTOR_STATE)
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("connector")
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind(CHANGE_CONNECTOR_STATE)
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("connector")
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         when(namespacedClient.changeConnectorState(any(), any(), any(), any()))
-                .thenReturn(HttpResponse.notFound(changeConnectorStateResource));
+            .thenReturn(HttpResponse.notFound(changeConnectorStateResource));
 
-        Optional<Resource> actual = resourceService.changeConnectorState("namespace", "connector", changeConnectorStateResource,
+        Optional<Resource> actual =
+            resourceService.changeConnectorState("namespace", "connector", changeConnectorStateResource,
                 cmd.getCommandSpec());
 
         assertTrue(actual.isEmpty());
         verify(formatService).displayError(argThat(exception -> exception.getStatus().equals(HttpStatus.NOT_FOUND)
-                        && exception.getMessage().equals("Not Found")), eq(CONNECTOR), eq("connector"),
-                eq(cmd.getCommandSpec()));
+                && exception.getMessage().equals("Not Found")), eq(CONNECTOR), eq("connector"),
+            eq(cmd.getCommandSpec()));
     }
 
     @Test
     void shouldChangeConnectorStateFail() {
         Resource changeConnectorStateResource = Resource.builder()
-                .kind(CHANGE_CONNECTOR_STATE)
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("connector")
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind(CHANGE_CONNECTOR_STATE)
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("connector")
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         HttpClientResponseException exception = new HttpClientResponseException("error", HttpResponse.serverError());
         when(namespacedClient.changeConnectorState(any(), any(), any(), any()))
-                .thenThrow(exception);
+            .thenThrow(exception);
 
-        Optional<Resource> actual = resourceService.changeConnectorState("namespace", "connector", changeConnectorStateResource,
+        Optional<Resource> actual =
+            resourceService.changeConnectorState("namespace", "connector", changeConnectorStateResource,
                 cmd.getCommandSpec());
 
         assertTrue(actual.isEmpty());
@@ -924,20 +959,21 @@ class ResourceServiceTest {
     @Test
     void shouldChangeSchemaCompatibility() {
         Resource changeSchemaCompatResource = Resource.builder()
-                .kind(SCHEMA_COMPATIBILITY_STATE)
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("subject")
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind(SCHEMA_COMPATIBILITY_STATE)
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("subject")
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         when(namespacedClient.changeSchemaCompatibility(any(), any(), any(), any()))
-                .thenReturn(HttpResponse.ok(changeSchemaCompatResource));
+            .thenReturn(HttpResponse.ok(changeSchemaCompatResource));
 
-        Optional<Resource> actual = resourceService.changeSchemaCompatibility("namespace", "subject", SchemaCompatibility.FORWARD_TRANSITIVE,
+        Optional<Resource> actual =
+            resourceService.changeSchemaCompatibility("namespace", "subject", SchemaCompatibility.FORWARD_TRANSITIVE,
                 cmd.getCommandSpec());
 
         assertTrue(actual.isPresent());
@@ -947,26 +983,27 @@ class ResourceServiceTest {
     @Test
     void shouldChangeSchemaCompatibilityNotFound() {
         Resource changeConnectorStateResource = Resource.builder()
-                .kind(CHANGE_CONNECTOR_STATE)
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("subject")
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind(CHANGE_CONNECTOR_STATE)
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("subject")
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         when(namespacedClient.changeSchemaCompatibility(any(), any(), any(), any()))
-                .thenReturn(HttpResponse.notFound(changeConnectorStateResource));
+            .thenReturn(HttpResponse.notFound(changeConnectorStateResource));
 
-        Optional<Resource> actual = resourceService.changeSchemaCompatibility("namespace", "subject", SchemaCompatibility.FORWARD_TRANSITIVE,
+        Optional<Resource> actual =
+            resourceService.changeSchemaCompatibility("namespace", "subject", SchemaCompatibility.FORWARD_TRANSITIVE,
                 cmd.getCommandSpec());
 
         assertTrue(actual.isEmpty());
         verify(formatService).displayError(argThat(exception -> exception.getStatus().equals(HttpStatus.NOT_FOUND)
-                        && exception.getMessage().equals("Not Found")), eq(SUBJECT), eq("subject"),
-                eq(cmd.getCommandSpec()));
+                && exception.getMessage().equals("Not Found")), eq(SUBJECT), eq("subject"),
+            eq(cmd.getCommandSpec()));
     }
 
     @Test
@@ -975,9 +1012,10 @@ class ResourceServiceTest {
 
         HttpClientResponseException exception = new HttpClientResponseException("error", HttpResponse.serverError());
         when(namespacedClient.changeSchemaCompatibility(any(), any(), any(), any()))
-                .thenThrow(exception);
+            .thenThrow(exception);
 
-        Optional<Resource> actual = resourceService.changeSchemaCompatibility("namespace", "subject", SchemaCompatibility.FORWARD_TRANSITIVE,
+        Optional<Resource> actual =
+            resourceService.changeSchemaCompatibility("namespace", "subject", SchemaCompatibility.FORWARD_TRANSITIVE,
                 cmd.getCommandSpec());
 
         assertTrue(actual.isEmpty());
@@ -987,18 +1025,18 @@ class ResourceServiceTest {
     @Test
     void shouldResetPassword() {
         Resource changeSchemaCompatResource = Resource.builder()
-                .kind(KAFKA_USER_RESET_PASSWORD)
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("user")
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind(KAFKA_USER_RESET_PASSWORD)
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("user")
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         when(namespacedClient.resetPassword(any(), any(), any()))
-                .thenReturn(HttpResponse.ok(changeSchemaCompatResource));
+            .thenReturn(HttpResponse.ok(changeSchemaCompatResource));
 
         int actual = resourceService.resetPassword("namespace", "username", TABLE, cmd.getCommandSpec());
 
@@ -1009,24 +1047,24 @@ class ResourceServiceTest {
     @Test
     void shouldResetPasswordNotFound() {
         Resource changeConnectorStateResource = Resource.builder()
-                .kind(KAFKA_USER_RESET_PASSWORD)
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind(KAFKA_USER_RESET_PASSWORD)
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("prefix.topic")
+                .build())
+            .spec(Map.of())
+            .build();
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         when(namespacedClient.resetPassword(any(), any(), any()))
-                .thenReturn(HttpResponse.notFound(changeConnectorStateResource));
+            .thenReturn(HttpResponse.notFound(changeConnectorStateResource));
 
         int actual = resourceService.resetPassword("namespace", "username", TABLE, cmd.getCommandSpec());
 
         assertEquals(1, actual);
         verify(formatService).displayError(argThat(exception -> exception.getStatus().equals(HttpStatus.NOT_FOUND)
-                        && exception.getMessage().equals("Not Found")), eq(cmd.getCommandSpec()));
+            && exception.getMessage().equals("Not Found")), eq(cmd.getCommandSpec()));
     }
 
     @Test
@@ -1035,7 +1073,7 @@ class ResourceServiceTest {
 
         HttpClientResponseException exception = new HttpClientResponseException("error", HttpResponse.serverError());
         when(namespacedClient.resetPassword(any(), any(), any()))
-                .thenThrow(exception);
+            .thenThrow(exception);
 
         int actual = resourceService.resetPassword("namespace", "username", TABLE, cmd.getCommandSpec());
 
@@ -1046,29 +1084,30 @@ class ResourceServiceTest {
     @Test
     void shouldListAvailableVaultsConnectClusters() {
         Resource availableVaults = Resource.builder()
-                .kind(CONNECT_CLUSTER)
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("connectCluster")
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind(CONNECT_CLUSTER)
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("connectCluster")
+                .build())
+            .spec(Map.of())
+            .build();
 
         when(namespacedClient.listAvailableVaultsConnectClusters(any(), any()))
-                .thenReturn(Collections.singletonList(availableVaults));
+            .thenReturn(Collections.singletonList(availableVaults));
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         int actual = resourceService.listAvailableVaultsConnectClusters("namespace", cmd.getCommandSpec());
 
         assertEquals(0, actual);
-        verify(formatService).displayList(CONNECT_CLUSTER, Collections.singletonList(availableVaults), TABLE, cmd.getCommandSpec());
+        verify(formatService).displayList(CONNECT_CLUSTER, Collections.singletonList(availableVaults), TABLE,
+            cmd.getCommandSpec());
     }
 
     @Test
     void shouldListAvailableVaultsConnectClustersWhenEmpty() {
         when(namespacedClient.listAvailableVaultsConnectClusters(any(), any()))
-                .thenReturn(Collections.emptyList());
+            .thenReturn(Collections.emptyList());
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
         StringWriter sw = new StringWriter();
@@ -1084,7 +1123,7 @@ class ResourceServiceTest {
     void shouldListAvailableVaultsConnectClustersAndThrowException() {
         HttpClientResponseException exception = new HttpClientResponseException("error", HttpResponse.serverError());
         when(namespacedClient.listAvailableVaultsConnectClusters(any(), any()))
-                .thenThrow(exception);
+            .thenThrow(exception);
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
@@ -1097,31 +1136,33 @@ class ResourceServiceTest {
     @Test
     void shouldVaultsOnConnectClusters() {
         Resource availableVaults = Resource.builder()
-                .kind(CONNECT_CLUSTER)
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("connectCluster")
-                        .build())
-                .spec(Map.of())
-                .build();
+            .kind(CONNECT_CLUSTER)
+            .apiVersion("v1")
+            .metadata(ObjectMeta.builder()
+                .name("connectCluster")
+                .build())
+            .spec(Map.of())
+            .build();
 
         when(namespacedClient.vaultsOnConnectClusters(any(), any(), any(), any()))
-                .thenReturn(Collections.singletonList(availableVaults));
+            .thenReturn(Collections.singletonList(availableVaults));
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
-        int actual = resourceService.vaultsOnConnectClusters("namespace", "connectCluster", Collections.singletonList("passwd"),
+        int actual =
+            resourceService.vaultsOnConnectClusters("namespace", "connectCluster", Collections.singletonList("passwd"),
                 cmd.getCommandSpec());
 
         assertEquals(0, actual);
-        verify(formatService).displayList(VAULT_RESPONSE, Collections.singletonList(availableVaults), TABLE, cmd.getCommandSpec());
+        verify(formatService).displayList(VAULT_RESPONSE, Collections.singletonList(availableVaults), TABLE,
+            cmd.getCommandSpec());
     }
 
     @Test
     void shouldVaultsOnConnectClustersAndThrowException() {
         HttpClientResponseException exception = new HttpClientResponseException("error", HttpResponse.serverError());
         when(namespacedClient.listAvailableVaultsConnectClusters(any(), any()))
-                .thenThrow(exception);
+            .thenThrow(exception);
 
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
@@ -1136,11 +1177,13 @@ class ResourceServiceTest {
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         doCallRealMethod()
-                .when(fileService).computeYamlFileList(any(), anyBoolean());
+            .when(fileService).computeYamlFileList(any(), anyBoolean());
         doCallRealMethod()
-                .when(fileService).parseResourceListFromFiles(any());
+            .when(fileService).parseResourceListFromFiles(any());
 
-        List<Resource> actual = resourceService.parseResources(Optional.of(new File("src/test/resources/topics/topic.yml")), false, cmd.getCommandSpec());
+        List<Resource> actual =
+            resourceService.parseResources(Optional.of(new File("src/test/resources/topics/topic.yml")), false,
+                cmd.getCommandSpec());
 
         assertEquals(1, actual.size());
         assertEquals("Topic", actual.get(0).getKind());
@@ -1154,10 +1197,11 @@ class ResourceServiceTest {
         CommandLine cmd = new CommandLine(new KafkactlCommand());
 
         when(fileService.computeYamlFileList(any(), anyBoolean()))
-                .thenReturn(Collections.emptyList());
+            .thenReturn(Collections.emptyList());
 
         CommandLine.ParameterException actual = assertThrows(CommandLine.ParameterException.class,
-                () -> resourceService.parseResources(Optional.of(new File("src/test/resources/topics/topic.yml")), false, cmd.getCommandSpec()));
+            () -> resourceService.parseResources(Optional.of(new File("src/test/resources/topics/topic.yml")), false,
+                cmd.getCommandSpec()));
 
         assertEquals("Could not find YAML or YML files in topic.yml directory.", actual.getMessage());
     }
